languages/montiarc-fe/src/test/resources/unused/contextconditions/valid/CorrectCompInValid.arc_
package valid;

// TODO: Unused?
component CorrectCompInValid {

    port
        in String stringIn,
        out String stringOut;

}