languages/montiarc-fe/src/test/resources/unused/contextconditions/invalid/InvalidCD.arc_
package contextconditions.invalid;

import doesnotexist.invalidType;
import java.lang.String;

// TODO: Unused?
component InvalidCD {
  port
    in invalidType a,
    out invalidType b;
}
